feat: change input handlers

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -28,6 +28,12 @@ body {
 h1 {
   font-size: 3rem;
   margin-bottom: 3rem;
+  display: flex;
+  justify-content: center;
+}
+
+#name {
+  margin-left: 20px;
 }
 
 h2 {
