--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
