--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  font-size: 10px;
+}
+
 body {
   font-family: 'Quicksand', sans-serif;
   display: flex;
@@ -14,7 +18,7 @@ body {
   height: 100vh;
   background-size: cover;
   color: #fff;
-  font-size: 10px;
+  font-size: 1.4rem;
   transition: background-image 1s ease-in-out;
 }
 
@@ -41,6 +45,85 @@ h2 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
   opacity: 0.6;
+}
+
+#next-image {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 30px;
+  height: 30px;
+  background: url(../assets/img/refresh.svg);
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#next-image:hover {
+  transform: rotate(90deg);
+}
+
+.weather {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
+
+.temperature-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+.weather-icon {
+  font-size: 2rem;
+  margin-right: 5px;
+}
+
+.city {
+  font-size: 2rem;
+}
+
+.lang {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+}
+
+#next-quote {
+  display: inline-block;
+  position: absolute;
+  bottom: 25px;
+  right: 25px;
+  width: 40px;
+  height: 40px;
+  background: url(../assets/img/next.svg);
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#next-quote:hover {
+  transform: translate(10px);
+}
+
+.blockquote {
+  position: absolute;
+  bottom: 25px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+.lang {
+  font-size: 2rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.lang:hover {
+  transform: scale(1.3);
 }
 
 @media (max-width: 700px) {
