--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -20,6 +20,8 @@ body {
   color: #fff;
   font-size: 1.4rem;
   transition: background-image 1s ease-in-out;
+  width: 100vw;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 0px 2000px inset;
 }
 
 #time {
@@ -32,9 +34,12 @@ body {
 
 h1 {
   font-size: 3rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  word-break: break-all;
+  max-width: 95vw;
 }
 
 #name {
@@ -44,7 +49,9 @@ h1 {
 h2 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
-  opacity: 0.6;
+  opacity: 0.7;
+  word-break: break-all;
+  max-width: 95vw;
 }
 
 #next-image {
@@ -77,7 +84,6 @@ h2 {
 }
 
 .weather-icon {
-  font-size: 2rem;
   margin-right: 5px;
 }
 
@@ -127,7 +133,49 @@ h2 {
 }
 
 @media (max-width: 700px) {
+  h1 {
+    margin-bottom: 10px;
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.6rem;
+  }
+
   #time {
     font-size: 6rem;
+  }
+
+  #next-image {
+    width: 20px;
+    height: 20px;
+    top: 10px;
+    left: 10px;
+  }
+
+  #next-quote {
+    width: 20px;
+    height: 20px;
+    bottom: 10px;
+    right: 10px;
+  }
+
+  .lang {
+    font-size: 1.4rem;
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .weather {
+    top: 10px;
+    right: 10px;
+  }
+
+  .temperature-info {
+    font-size: 1.6rem;
+  }
+
+  .city {
+    font-size: 1.6rem;
   }
 }
