--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -24,6 +24,10 @@ body {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 0px 2000px inset;
 }
 
+body * {
+  text-shadow: 1px 1px 1px #000;
+}
+
 #time {
   font-size: 8rem;
 }
@@ -125,7 +129,7 @@ h2 {
 }
 
 #next-quote:hover {
-  transform: translate(10px);
+  transform: translate(5px);
 }
 
 #next-quote:focus {
@@ -148,6 +152,60 @@ h2 {
 
 .lang:hover {
   transform: scale(1.3);
+}
+
+.toast {
+  overflow: hidden;
+  font-size: 1.4rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  display: none;
+  position: relative;
+  padding: 1rem 2rem 1rem 1rem;
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
+.toasts {
+  position: fixed;
+  top: 15px;
+  left: 0;
+  right: 0;
+  max-width: 320px;
+  margin: 0 auto;
+}
+
+.toast__close {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.6;
+  appearance: button;
+  margin: 0;
+  font-family: inherit;
+  border-radius: 0;
+}
+
+.toast_show {
+  display: block;
+}
+
+.toast:not(:last-child) {
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 700px) {
@@ -184,11 +242,6 @@ h2 {
     left: 10px;
   }
 
-  .weather {
-    top: 10px;
-    right: 10px;
-  }
-
   .temperature-info {
     font-size: 1.6rem;
   }
@@ -198,9 +251,13 @@ h2 {
   }
 
   .weather {
+    top: 10px;
+    right: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     column-gap: 10px;
+    flex-wrap: wrap;
+    max-width: 80%;
   }
 }
