--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -154,6 +154,16 @@ h2 {
   transform: scale(1.3);
 }
 
+.current-time {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.seconds {
+  width: 80px;
+}
+
 .toast {
   overflow: hidden;
   font-size: 1.4rem;
@@ -259,5 +269,9 @@ h2 {
     column-gap: 10px;
     flex-wrap: wrap;
     max-width: 80%;
+  }
+
+  .seconds {
+    width: 60px;
   }
 }
