--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -82,19 +82,20 @@ h2 {
   position: absolute;
   top: 25px;
   right: 25px;
+  text-align: right;
 }
 
 .temperature-info {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   font-size: 2rem;
 }
 
 .add-info {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .wind {
