--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -33,7 +33,7 @@ body * {
 }
 
 .day {
-  font-size: 2rem;
+  font-size: 4rem;
 }
 
 h1 {
@@ -56,6 +56,10 @@ h2 {
   opacity: 0.7;
   word-break: break-all;
   max-width: 95vw;
+}
+
+#focus {
+  opacity: 1;
 }
 
 #next-image {
@@ -232,6 +236,10 @@ h2 {
 
   #time {
     font-size: 6rem;
+  }
+
+  .day {
+    font-size: 2rem;
   }
 
   #next-image {
